--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pip_conf_index_global"
 [packages]
 django = "*"
 djangorestframework = "*"
+dj-database-url = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 autopep8 = "*"
