--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
+whitenoise = {extras = ["brotli"], version = "*"}
 
 [dev-packages]
 autopep8 = "*"
