--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
 whitenoise = {extras = ["brotli"], version = "*"}
+gunicorn = "*"
 
 [dev-packages]
 autopep8 = "*"
