--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Brotli==1.0.9
 dj-database-url==1.3.0
 Django==4.2
 djangorestframework==3.14.0
+gunicorn==20.1.0
 psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pytz==2023.3
